k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-app
  namespace: devops-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app

    spec:
      containers:
      - name: demo-app
        image: nginx:alpine

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5           # ждём 5 секунд после старта
          periodSeconds: 10                # проверяем каждые 10 секунд

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10          # ждём 10 секунд после старта
          periodSeconds: 20                # проверяем каждые 20 секунд
