k8s/app-service.yaml
apiVersion: v1 
kind: Service 

metadata:
  name: demo-app-service
  namespace: devops-platform

  labels: 
    app: demo-app 

spec:
  selector:
    app: demo-app 

  ports:
    - name: http 
      protocol: TCP 
      port: 80
      targetPort: 5000
    
  type: ClusterIP
