k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 

metadata:
  name: demo-app-ingress
  namespace: devops-platform

spec: 
  rules: 
  - host: devops.local
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo-app-service
            port: 
              number: 80
